comments and small changes

--- a/ui.htm
+++ b/ui.htm
@@ -25,7 +25,11 @@
 				</nav>
 				
 			</header>
-			<section></section>
+			<section>
+				<div class="main-content">
+				
+				</div>
+			</section>
 			<footer>
 				<div class="button">
 					<span>
