added main content (static)

--- a/ui.htm
+++ b/ui.htm
@@ -26,8 +26,16 @@
 				
 			</header>
 			<section>
+				<div class="shade">
+				</div>
 				<div class="main-content">
-				
+					<div class="text">
+						GRIT
+					</div>
+					<span>
+						BOSM'17
+					</span>
+
 				</div>
 			</section>
 			<footer>
