--- a/timer/timer.html
+++ b/timer/timer.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Timer for BOSM17-Intro</title>
     <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/timer.css">
     <script src="js/prefixfree.min.js" charset="utf-8"></script>
   </head>
   <body>
     <div id="timer">
     </div>
   </body>
-  <script src="js/main.js" charset="utf-8"></script>
+  <script src="js/timer.js" charset="utf-8"></script>
 </html>
