--- a/ui.htm
+++ b/ui.htm
@@ -41,30 +41,30 @@
 			<footer>
 				<div class="button">
 					<span>
-						<img src="assets/images/glyphicons-174-play.png">
+						<img src="assets/images/play-icon.png">
 					</span>
 				Simon Tauffel
 				</div>
 				<div class="button">
 					<span>
-						<img src="assets/images/glyphicons-174-play.png">
+						<img src="assets/images/play-icon.png">
 					</span>
 				Teaser
 				</div>
 				<div class="social_media_icons">
 					<div class="icon">
 						<span>
-							<img src="assets/images/glyphicons-social-31-facebook.png">
+							<img src="assets/images/facebook-icon.png">
 						</span>
 					</div><!--
 					--><div class="icon">
 						<span>
-							<img src="assets/images/glyphicons-social-23-youtube.png">
+							<img src="assets/images/youtube-icon.png">
 						</span>
 					</div><!--
 					--><div class="icon">
 						<span>
-							<img src="assets/images/glyphicons-social-32-twitter.png">
+							<img src="assets/images/twitter-icon.png">
 						</span>
 					</div>
 
