small changes(colors and fonts)

--- a/ui.htm
+++ b/ui.htm
@@ -43,7 +43,7 @@
 					<span>
 						<img src="assets/images/play-icon.png">
 					</span>
-				Simon Tauffel
+				Simon Taufel
 				</div>
 				<div class="button">
 					<span>
