added navjot's animation

--- a/ui.htm
+++ b/ui.htm
@@ -29,13 +29,17 @@
 				<div class="shade">
 				</div>
 				<div class="main-content">
-					<div class="text">
-						GRIT
+					<div class="container">
+						<div class="text-container">
+							<div class="text">
+								GRIT
+							</div>
+							<span>
+								BOSM'17
+							</span>
+						</div>
+						<div class="box"></div>
 					</div>
-					<span>
-						BOSM'17
-					</span>
-
 				</div>
 			</section>
 			<footer>
