small glitch fixes

--- a/ui.htm
+++ b/ui.htm
@@ -10,6 +10,14 @@
 	</head>
 	<body>
 		<div class="layer" id="one"><!--images--></div>
+
+		
+		<!-- <div class="layer" id="three">
+			
+			<aside></aside>
+		</div> -->
+
+
 		<div class="layer" id="two">
 			<!--main content-->
 			<header>
@@ -75,12 +83,15 @@
 				</div>
 			</footer>
 		</div>
-		<!-- timer -->
-		<!--
-		<div class="layer" id="three">
+		
+		
+
+	
+		<!-- youtube video -->
+		<div class="backdrop">
 			
-			<aside></aside>
 		</div>
-		-->
+		<script src="assets/javascript/jquery.min.js"></script>
+		<script src="assets/javascript/ui.js"></script>
 	</body>
 </html>
