--- a/ui.htm
+++ b/ui.htm
@@ -51,13 +51,13 @@
 				</div>
 			</section>
 			<footer>
-				<div class="button">
+				<div class="button" list="0">
 					<span>
 						<img src="assets/images/play-icon.png">
 					</span>
 				Simon Taufel
 				</div>
-				<div class="button">
+				<div class="button" list="1">
 					<span>
 						<img src="assets/images/play-icon.png">
 					</span>
@@ -89,9 +89,41 @@
 	
 		<!-- youtube video -->
 		<div class="backdrop">
-			
+			<div class="youtube-video-container">
+				<div id="player"></div>
+			</div>
 		</div>
+		<script src="https://www.youtube.com/iframe_api"></script>
 		<script src="assets/javascript/jquery.min.js"></script>
+		
+		<script>
+			var youtube_video_ids = ['7lkhrw-Mj8g','avXQPMNIj-k'];
+
+			var curr_id = 0;
+
+			  var player;
+		      function onYouTubeIframeAPIReady() {
+		        player = new YT.Player('player', {
+		          height: '390',
+		          width: '640',
+		          videoId: youtube_video_ids[curr_id],
+		          events: {
+		            'onReady': onPlayerReady,
+		            // 'onStateChange': onPlayerStateChange
+		            // 'loadVideoById': loadVideoById,
+		          }
+		        });
+		      }
+
+		       function onPlayerReady(event) {
+			        // event.target.playVideo();
+			   }
+
+			   function stopVideo() {
+		        player.stopVideo();
+		      	}
+
+		</script>
 		<script src="assets/javascript/ui.js"></script>
 	</body>
 </html>
