small glich fixes

--- a/ui.htm
+++ b/ui.htm
@@ -100,12 +100,20 @@
 			var youtube_video_ids = ['7lkhrw-Mj8g','avXQPMNIj-k'];
 
 			var curr_id = 0;
+			var youtube_width = '640';
+			var youtube_height = '390';
+
+			if($(window).width()<700){
+				youtube_width = '300';
+				youtube_height = '150'
+			}
+
 
 			  var player;
 		      function onYouTubeIframeAPIReady() {
 		        player = new YT.Player('player', {
-		          height: '390',
-		          width: '640',
+		          height: youtube_height,
+		          width: youtube_width,
 		          videoId: youtube_video_ids[curr_id],
 		          events: {
 		            'onReady': onPlayerReady,
