--- a/timer/timer.html
+++ b/timer/timer.html
@@ -5,10 +5,13 @@
     <title>Timer for BOSM17-Intro</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/timer.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <script src="js/prefixfree.min.js" charset="utf-8"></script>
   </head>
   <body>
-    <div id="timer">
+    <div id="timer-wrapper">
+      <div id="timer">
+      </div>
     </div>
   </body>
   <script src="js/timer.js" charset="utf-8"></script>
