--- a/ui.htm
+++ b/ui.htm
@@ -5,9 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>BOSM Intro</title>
 		<link rel="stylesheet" href="assets/stylesheet/resets.css">
-
 		<link rel="stylesheet" href="assets/stylesheet/ui.css">
-				<link rel="stylesheet" href="assets/stylesheet/image-trans.css">
+		<link rel="stylesheet" href="assets/stylesheet/image-trans.css">
+		<link rel="stylesheet" href="timer/css/timer.css">
 		<style media="screen">
 			@font-face {
 				font-family: Bebas;
@@ -21,6 +21,7 @@
 		<script src="http://code.jquery.com/jquery-latest.min.js">	</script>
 	<script type="text/javascript" src="assets/javascript/lettering.js"></script>
 	<script type="text/javascript" src="assets/javascript/textillate.js"></script>
+	<script type="text/javascript" src="timer/js/prefixfree.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheet/animate.css">
 	</head>
 	<body>
@@ -83,6 +84,10 @@
 					</div>
 				</div>
 			</section>
+			<div id="timer-wrapper">
+				<div id="timer">
+				</div>
+			</div>
 			<footer>
 			<div class="footer-inwrap">
 				<div class="buttons">
@@ -130,8 +135,7 @@
 			</div>
 		</div>
 		<script src="https://www.youtube.com/iframe_api"></script>
-
-
+		<script src="timer/js/timer.js" charset="utf-8"></script>
 		<script>
 			//youtube api
 
