--- a/ui.htm
+++ b/ui.htm
@@ -27,21 +27,21 @@
 	<body>
 		<div class="layer" id="one">
 			<div id="slider">
-			<figure>
-				<div class="img" style="background-image: url(resources/01.jpg);"></div>
-				<div class="img" style="background-image: url(resources/02.jpg);"></div>
-				<div class="img" style="background-image: url(resources/03.jpg);"></div>
-				<div class="img" style="background-image: url(resources/01.jpg);"></div>
+			<figure class="active">
+				<div class="imgwrap" style="background-image: url(resources/01.jpg);"></div>
+				<div class="imgwrap" style="background-image: url(resources/02.jpg);"></div>
+				<div class="imgwrap" style="background-image: url(resources/03.jpg);"></div>
+				<div class="imgwrap" style="background-image: url(resources/01.jpg);"></div>
 			</figure>
 			</div>
-			<div class="clr">
+			<!-- <div class="clr">
 			<div>
 			<div class="red" style="background-color: #EF3340;opacity: 0.56;height: 100vh;"></div>
 			<div class="blue" style="background-color: #00FED3;opacity: 0.56;height: 100vh;"></div>
 			<div class="green" style="background-color: #D68FD6;opacity: 0.56;height: 100vh;"></div>
 			<div class="red" style="background-color: #EF3340;opacity: 0.56;height: 100vh;"></div>
 			</div>
-			</div>
+			</div> -->
 		</div>
 
 
@@ -72,8 +72,9 @@
 				<div class="main-content">
 					<div class="container">
 						<div class="text-container">
-							<div class="text">
-								<ul class="texts"><li>GRIT</li><li>GUTS</li><li>GLORY</li>
+							<div class="text active">
+								<ul class="texts active">
+									<li>GRIT</li><li>GUTS</li><li>GLORY</li>
 								</ul>
 							</div>
 							<span class="bosm-17">
@@ -91,12 +92,6 @@
 			<footer>
 			<div class="footer-inwrap">
 				<div class="buttons">
-					<div class="button" list="0">
-						<span>
-							<img src="assets/images/play-icon.png">
-						</span>
-					Simon Taufel
-					</div>
 					<div class="button" list="1">
 						<span>
 							<img src="assets/images/play-icon.png">
@@ -175,37 +170,56 @@
 
 
 		      	// text animations
+						$('div.text').textillate({
+						  // the default selector to use when detecting multiple texts to animate
+						  selector: '.texts.active',
 
-		      			$('#two .texts').textillate({
-							 selector: '#two .texts',
-							  loop: true,
-							  minDisplayTime: 2000,
-							  initialDelay: 0,
-							  autoStart: true,
-							  inEffects: [],
-							  outEffects: [ 'hinge' ],
-							  in: {
+						  // enable looping
+						  loop: true,
 
-							    effect: 'fadeIn',
-							    delayScale: 1.5,
-							    delay: 50,
-							    sync: false,
-							    shuffle: false,
-								reverse: false,
-							    callback: function () {}
-							  },
-							  out: {
-							    effect: 'fadeOut',
-							    delayScale: 1.5,
-							    delay: 50,
-							    sync: false,
-							    shuffle: false,
-							    reverse: false,
-							    callback: function () {}
-							  },
-							  callback: function () {},
-							  type: 'char'
-							});
+						  // sets the minimum display time for each text before it is replaced
+						  minDisplayTime: 3500,
+
+						  // sets the initial delay before starting the animation
+						  // (note that depending on the in effect you may need to manually apply
+						  // visibility: hidden to the element before running this plugin)
+						  initialDelay: 0,
+
+						  // set whether or not to automatically start animating
+						  autoStart: true,
+
+						  // custom set of 'in' effects. This effects whether or not the
+						  // character is shown/hidden before or after an animation
+						  inEffects: [],
+
+						  // custom set of 'out' effects
+						  outEffects: [],
+
+						  // in animation settings
+						  in: {
+						  	// set the effect name
+						    effect: 'fadeIn',
+						  },
+
+						  // out animation settings.
+						  out: {
+						    effect: 'fadeOut',
+						  },
+						  type: 'char'
+						});
+						$('div#slider figure').addClass('active');
+						$('nav > ul > li').on('click',function(){
+							if($('div.text').hasClass('active')){
+								$('#slider figure').css('animation-play-state','paused');
+								$('div.text span *').css('animation-play-state','paused');
+							}
+							else {
+								$('#slider figure').css('animation-play-state','running');
+								$('div.text span *').css('animation-play-state','running');
+							}
+							$('div.text').toggleClass('active');
+						});
+
 		</script>
 		<script src="assets/javascript/ui.js"></script>
 	</body>
