--- a/ui.htm
+++ b/ui.htm
@@ -62,6 +62,8 @@
 						<li><a>About Us</a></li>
 						<li><a>Contacts</a></li>
 						<li><a>Sponsors</a></li>
+						<li><a>Travel Partner</a></li>
+						<li><a>Subscribe</a></li>
 					</ul>
 				</nav>
 
