--- a/ui.htm
+++ b/ui.htm
@@ -104,17 +104,17 @@
 				<div class="social_media_icons">
 					<div class="icon">
 						<span>
-							<img src="assets/images/facebook-icon.png">
+							<a href = "https://www.facebook.com/bosmbitspilani/?hc_ref=SEARCH&fref=nf"><img src="assets/images/facebook-icon.png"></a>
 						</span>
 					</div>
 					<div class="icon">
 						<span>
-							<img src="assets/images/youtube-icon.png">
+							<a href = "https://www.youtube.com/user/bitsbosm"><img src="assets/images/youtube-icon.png"></a>
 						</span>
 					</div>
 					<div class="icon">
 						<span>
-							<img src="assets/images/twitter-icon.png">
+							<a href = "https://twitter.com/bosm_bitspilani"><img src="assets/images/twitter-icon.png"></a>
 						</span>
 					</div>
 				</div>
