--- a/popups/popup.html
+++ b/popups/popup.html
@@ -68,43 +68,43 @@ var cossac = [
 	{
 		name: "Shreshtha",
 		img: "Shreshtha.jpg",
-		dept: "Unknown",
+		dept: "Joint Sports Secretary",
 		email: "Unknown"
 	},
 	{
 		name: "Ashay",
 		img: "Ashay.jpg",
-		dept: "Unknown",
-		email: "Unknown"
+		dept: "For Correspondence and Publicity",
+		email: "pcr@bits-bosm.org"
 	},
 	{
 		name: "Gautham",
 		img: "Gautham.jpg",
-		dept: "Unknown",
-		email: "Unknown"
+		dept: "For Reception and Accomodation",
+		email: "recnacc@bits-bosm.org"
 	},
 	{
 		name: "Jayshil",
 		img: "Jayshil.jpg",
-		dept: "DVM",
-		email: "Unknown"
+		dept: "Sports Secretary",
+		email: "sportssecretary@bits-bosm.org"
 	},
 	{
 		name: "Pavan",
 		img: "Pavan.jpg",
-		dept: "Unknown",
-		email: "Unknown"
+		dept: "For Scheduling and Events",
+		email: "controls.bits-bosm.org"
 	},
 	{
 		name: "Siddharth",
 		img: "Siddharth.jpg",
-		dept: "Unknown",
+		dept: "Joint Sports Secretary",
 		email: "Unknown"
 	},
 	{
-		name: "Untitled",
+		name: "Aman",
 		img: "Untitled.jpg",
-		dept: "Unknown",
+		dept: "Joint Sports Secretary",
 		email: "Unknown"
 	}
 ];
